tests/ui/missing_clone.stderr
error[E0277]: the trait bound `TestClass: Clone` is not satisfied
   --> tests/ui/missing_clone.rs:15:32
    |
15  |     let t: TestClass = pyvalue.extract(py).unwrap();
    |                                ^^^^^^^ the trait `Clone` is not implemented for `TestClass`
    |
    = note: required because of the requirements on the impl of `pyo3::FromPyObject<'_>` for `TestClass`
note: required by a bound in `pyo3::Py::<T>::extract`
   --> src/instance.rs
    |
    |         D: FromPyObject<'p>,
    |            ^^^^^^^^^^^^^^^^ required by this bound in `pyo3::Py::<T>::extract`
